--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 body { 
     width: 100vw;
     height: 100%;
-    background: url(/image/bg-repeat.jpg) repeat-x;
+    background: url(image/bg-repeat.jpg) repeat-x;
     background-size: 100% 100%;
 }
 
